# uofg-itech-project

./: .gitignore  .prettierrc  README.md  manage.py  populate_pickee.py  population_script.py  pyproject.toml  requirements.txt  run.py  setup.py
Pickee/: asgi.py  settings.py  urls.py  wsgi.py
Pickee/static/vue/js/: chunk-vendors.js
pickee_api/: admin.py  api.py  apps.py  forms.py  gateway.py  managers.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
pickee_api/views/: auth.py  profile.py  recommendation.py
pickee_frontend/: README.md  package.json  vue.config.js  webpack-stats.json
pickee_frontend/src/: App.vue  App02.vue  index.js  main.js  mainTwo.js
pickee_frontend/src/assets/styles/: app.css
pickee_frontend/src/components/: TestComponent.vue
pickee_frontend/src/components/ActorGrid/: ActorGrid.js  ActorGrid.vue
pickee_frontend/src/components/AddItemDialog/: AddItemDialog.css  AddItemDialog.js  AddItemDialog.vue
pickee_frontend/src/components/CasualPreferencesSelection/: CasualPreferencesSelection.css  CasualPreferencesSelection.js  CasualPreferencesSelection.vue
pickee_frontend/src/components/ChipBox/: ChipBox.css  ChipBox.vue
pickee_frontend/src/plugins/: responsive.js
pickee_frontend/src/services/: api.js  http.js
pickee_project/: asgi.py  settings.py  urls.py  wsgi.py
templates/: about.html  base.html  history.html  home.html  index.html  login.html  preferences.html  profile.html  profile_history.html  profile_main.html  profile_preferences.html  recommendation.html  signup.html  vue_app_01.html
(+167 files in other folders)
