[tool.poetry]
name = "uofg-itech-project"
version = "0.1.0"
description = ""
authors = ["Pedro Belfort <belfortdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
