[tool.poetry]
name = "uofg-itech-project"
version = "0.1.0"
description = ""
authors = ["Pedro Belfort <belfortdev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.12"
django-webpack-loader = "^0.6.0"
djangorestframework = "^3.11.0"
Pillow = "^7.0.0"
drf-extensions = "^0.6.0"
django-modeladmin-reorder = "^0.3.1"
requests = "^2.23.0"
djangorestframework-bulk = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
